# Kotilaitteet

./: .gitignore  README.md  app.py  electricity.py  models.py  network_scanner.py  pyproject.toml  test_app.py
kotilaitteet/: __init__.py  cli.py  device_manager.py  device_scanner.py  electricity.py  models.py  scheduler.py
kotilaitteet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/css/: style.css
static/js/: app.js
templates/: base.html  devices.html  electricity.html  index.html  scan.html  schedule.html
tests/: test_cli.py  test_device_manager.py  test_device_scanner.py  test_electricity.py  test_models.py  test_scheduler.py
