[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotilaitteet"
version = "0.1.0"
description = "Home device manager with electricity price control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
kotilaitteet = "kotilaitteet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
